infrastructure/aws/cloudformation/csye6225-cf-application.json
{
   "AWSTemplateFormatVersion":"2010-09-09",
   "Parameters":{
      "KeyPair":{
         "Type":"String"
      },
	 "VPC":{
         "Type":"String"
      },
      "ImageID":{
         "Type":"String"
      },
      "Domain":{
         "Type":"String"
      },
      "DBUsername":{
         "Default":"csye6225master",
         "Description":"Database Username",
         "Type":"String"
      },
      "DBPassword":{
         "Default":"csye6225password",
         "Description":"Database Password",
         "Type":"String"
      }
   },
  "Resources": {
    "webServerSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Enable HTTP access via port 80, SSH access via port 22",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "443",
            "ToPort": "443",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "8080",
            "ToPort": "8080",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "VpcId": {
          "Fn::ImportValue": ""
        }
      }
    },
    "dbSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security tag for db",
        "SecurityGroupIngress": [
          {
            "SourceSecurityGroupId": {
              "Ref": "webServerSecurityGroup"
            },
            "FromPort": 3306,
            "IpProtocol": "tcp",
            "ToPort": 3306
          }
        ],
        "VpcId": {
          "Fn::ImportValue": "csye6225-cf-vpc"
        }
      }
    },
    "DBSubnetGroup": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "DB Subnet Group",
        "DBSubnetGroupName": {
          "Fn::Join": [
            "",
            [
              {
                "Ref": "stackName"
              },
              "-csye6225-db-subnetgroup"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Fn::ImportValue": "csye6225-cf-dbsubnet1"
          },
          {
            "Fn::ImportValue": "csye6225-cf-dbsubnet2"
          }
        ]
      }
    },
    "EC2Instance" : {
      "Type" : "AWS::EC2::Instance",
      "Properties" : {
        "ImageId" : {"Ref": "ImageID"},
        "KeyName" : {"Ref":"KeyPair"},
        "InstanceType" : "t2.micro",
        "BlockDeviceMappings" : [
          {
            "DeviceName" : "/dev/sda1",
            "Ebs" : {
              "VolumeType" : "GP2",
              "Iops" : "200",
              "DeleteOnTermination" : "true",
              "VolumeSize" : "20"
            }
          }
        ]
      }
    },
    "DynamoDBTable" : {
      "Type" : "AWS::DynamoDB::Table",
      "Properties" : {
        "AttributeDefinitions" : [
          {
            "AttributeName" : "id",
            "AttributeType" : "S"
          }
        ],
        "ProvisionedThroughput" : {
          "ReadCapacityUnits" : "5",
          "WriteCapacityUnits" : "5"
        },
        "TableName" : "csye6225",
        "KeySchema" : {
          "AttributeName" : "id",
          "KeyType" : "HASH"
        }
      }
    }
  }
  }
